# MusicStreamer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
backend/: CMakeLists.txt  server.properties
backend/logic/: Container.cpp  Container.h  MusicStreamer.cpp  MusicStreamer.h  MusicTrack.cpp  MusicTrack.h  Room.cpp  Room.h  SoundChunk.cpp  SoundChunk.h  TrackHeader.cpp  TrackHeader.h  TrackStream.cpp  TrackStream.h  TracksQueue.cpp  TracksQueue.h
backend/logic/callback/: OnNextTrackListener.h  OnTrackQueuedListener.h
backend/messageSender/: Message.cpp  Message.h  MessageSender.cpp  MessageSender.h
backend/server/: AbstractServer.cpp  AbstractServer.h  BroadCastServer.cpp  BroadCastServer.h  CommunicationServer.cpp  CommunicationServer.h  Container.cpp  Container.h  RequestReader.cpp  RequestReader.h  RequestResponseServer.cpp  RequestResponseServer.h  Server.cpp  Server.h  ServerManager.cpp  ServerManager.h  ServerRunner.cpp  ServerRunner.h  SocketFactory.cpp  SocketFactory.h  TcpServer.cpp  TcpServer.h  UdpServer.cpp  UdpServer.h
backend/server/music/: MusicChannel.cpp  MusicChannel.h  WavHeaderStreamer.cpp  WavHeaderStreamer.h  WavSignalStreamer.cpp  WavSignalStreamer.h
backend/streamerClient/: ClientProxy.cpp  ClientProxy.h  ClientResponse.cpp  ClientResponse.h  MusicStreamer.cpp  MusicStreamer.h  Request.cpp  Request.h  RequestProcessor.cpp  RequestProcessor.h  Room.cpp  Room.h  Socket.h  StreamerClient.cpp  StreamerClient.h
backend/upload/: FileUpload.cpp  FileUpload.h  TrackUpload.cpp  TrackUpload.h  UploadHandler.cpp  UploadHandler.h  UploadMeta.cpp  UploadMeta.h  UploadedFile.cpp  UploadedFile.h
backend/upload/exception/: FileUploadException.cpp  FileUploadException.h
backend/utility/: Config.cpp  Config.h  TerminalUtils.h  synch.h  token.hpp
frontend/: build.gradle  settings.gradle
frontend/gradle/wrapper/: gradle-wrapper.properties
frontend/src/main/kotlin/cs/sk/musicstreamer/: Client.kt  Initializer.kt  Main.kt  MusicStreamer.kt  Request.kt  Response.kt  ServerConnector.kt
frontend/src/main/kotlin/cs/sk/musicstreamer/authorization/: AuthModal.kt  AuthService.kt
frontend/src/main/kotlin/cs/sk/musicstreamer/connection/: Client.kt  CommunicationServerConnector.kt  Request.kt  Response.kt  ServerConnector.kt  ServerUtility.kt
frontend/src/main/kotlin/cs/sk/musicstreamer/connection/connectors/: BroadCastConnector.kt  Connector.kt  ConnectorSlave.kt  ConnectorUtils.kt  MainConnector.kt  StreamingConnector.kt  UploadConnector.kt
frontend/src/main/kotlin/cs/sk/musicstreamer/connection/listeners/: IdentifiedMessageListener.kt  MessageListener.kt  UndefinedMessageListener.kt
frontend/src/main/kotlin/cs/sk/musicstreamer/connection/socket/: SocketConsumer.kt  SocketProxy.kt  SocketReader.kt  SocketWriter.kt
frontend/src/main/kotlin/cs/sk/musicstreamer/homepage/: AppLabel.kt  HomePageController.kt  HomePageView.kt  InfoService.kt  MainView.kt  MainViewController.kt  RoomsView.kt
frontend/src/main/kotlin/cs/sk/musicstreamer/room/: MusicConverter.kt  MusicPlayer.kt  MusicUploadService.kt  RoomView.kt  TrackCell.kt  TrackFrame.kt
frontend/src/main/kotlin/cs/sk/musicstreamer/utils/: Collections.kt  Interaction.kt  SVGFactory.kt  Validators.kt
frontend/src/main/resources/: application.properties
frontend/src/main/resources/auth/: auth_view.fxml
frontend/src/main/resources/cs.sk.musicstreamer/homepage/: homepage.fxml
frontend/src/main/resources/css/: style.css
frontend/src/main/resources/homepage/: homepage.fxml
frontend/src/main/resources/main/: app-label-fragment.fxml  main_view.fxml  room_view.fxml  rooms_view.fxml
server/: CMakeLists.txt  Server.cpp  Server.h
server/server/: Server.cpp  Server.h
server/streamerClient/: StreamerClient.cpp  StreamerClient.h
